# simlinx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  installLIEF.sh  installTests.py  requirements.txt  run_tests.sh  setup.py
.github/workflows/: build.yml
decode/: ExecDecode.isa  ExecDecodeCC.py  core.hh  decoder.rv.isa  execute.cc  execute.hh  generator.py  inst.sverilog  instruction.hh  quead.csv
generate/: autoClangFormat.py  custom.json  decoderTree.isa  execDecode.isa  generator.py  inst.sverilog  instr_dict_rv64.json  isaTemplateHandler.py  look.py  templates.py
generate/implemented/: instr_dict_rv_i.json  rv_zicsr.json
generate/isa/: decoderTree.isa  execDecode.isa  execDecode.isa.yaml  execDecodeRvZicsr.isa  execDecodeRvZicsr.isa.yaml  m.isa.yaml
generate/syscall/: example.yaml  sss.py  sysGen.py  sysParser.py  syscalls.yaml
generate/syscall/linux/: syscalls.h
include/cache/: basicBlockCache.hh  basicBlockCacheImpl.hh  fullyAssociative.hh
include/cpu/: core.hh  core.hpp  cpu.hh  cpu.hpp  fault.hh  instruction.hh  reg.hh
include/elf-parser/: parser.hpp
include/instruction/: instruction.hh  instruction.hpp
include/jit/: jitCompiller.hh
include/ram/: ram.hh  ram.hpp
include/reg-file/: baseRegFile.hh  csrRegFile.hh  xrfRegFile.hh
include/stat/: statistic.hh
include/utils/: warning.h
include/virtual-memory/: bitUnion.hh  mmu.hh  tlb.hh  walker.hh
page-table-api/: builder.cc  builder.hh  builder.hh.gch  sv32.cc  sv39.cc  test.cc  type.hh
page-table-api/sv32/: sv32.cc  sv32.hh
page-table-api/sv39/: sv39.cc  sv39.hh
riscv-examples/src/: fact.cc  fib.cc  fib.s  fib0.s  fib1.s  mmu.cc  queens.c
riscv-examples/src/test/: test1.cc  test2.cc  test3.cc  test4.cc  test5.cc  test6.cc
src/: CMakeLists.txt
src/cache/: basicBlockCache.cc
src/cpu/: core.cc  instruction.cc  main.cc
src/elf-parser/: parser.cpp
src/elf-parser/test/: CMakeLists.txt  elfReaderTest.cpp  helloTest.cpp  parserTest.cpp
src/jit/: jitCompiller.cc
src/sim/: CMakeLists.txt  main.cc  main.cpp
src/stat/: statistic.cc
src/virtual-memory/: mmu.cc  walker.cc
